--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-cors-headers==4.7.0
 django-ratelimit==4.1.0
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
+psycopg2==2.9.10
 PyJWT==2.9.0
 python-decouple==3.8
 six==1.17.0
