--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
 asgiref==3.8.1
 certifi==2025.6.15
+charset-normalizer==3.4.2
 cloudinary==1.44.1
 Django==5.2.3
+django-anymail==13.0
 django-cors-headers==4.7.0
 django-ratelimit==4.1.0
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
+idna==3.10
 psycopg2==2.9.10
 PyJWT==2.9.0
 python-decouple==3.8
+requests==2.32.4
 six==1.17.0
 sqlparse==0.5.3
 tzdata==2025.2
