--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 asgiref==3.8.1
+astroid==3.3.10
 certifi==2025.6.15
 charset-normalizer==3.4.2
 cloudinary==1.44.1
+colorama==0.4.6
+dill==0.4.0
 Django==5.2.3
 django-anymail==13.0
 django-cors-headers==4.7.0
@@ -9,11 +12,19 @@ django-ratelimit==4.1.0
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
 idna==3.10
+isort==6.0.1
+mccabe==0.7.0
+platformdirs==4.3.8
 psycopg2==2.9.10
 PyJWT==2.9.0
+pylint==3.3.7
+pylint-django==2.6.1
+pylint-plugin-utils==0.9.0
 python-decouple==3.8
+python-dotenv==1.1.0
 requests==2.32.4
 six==1.17.0
 sqlparse==0.5.3
+tomlkit==0.13.3
 tzdata==2025.2
 urllib3==2.5.0
