--- a/requirements.txt
+++ b/requirements.txt
@@ -8,13 +8,32 @@ dill==0.4.0
 Django==5.2.3
 django-anymail==13.0
 django-cors-headers==4.7.0
+django-prometheus==2.4.1
 django-ratelimit==4.1.0
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
+googleapis-common-protos==1.70.0
+grpcio==1.73.1
 idna==3.10
+importlib_metadata==8.7.0
 isort==6.0.1
 mccabe==0.7.0
+opentelemetry-api==1.34.1
+opentelemetry-exporter-otlp==1.34.1
+opentelemetry-exporter-otlp-proto-common==1.34.1
+opentelemetry-exporter-otlp-proto-grpc==1.34.1
+opentelemetry-exporter-otlp-proto-http==1.34.1
+opentelemetry-instrumentation==0.55b1
+opentelemetry-instrumentation-django==0.55b1
+opentelemetry-instrumentation-wsgi==0.55b1
+opentelemetry-proto==1.34.1
+opentelemetry-sdk==1.34.1
+opentelemetry-semantic-conventions==0.55b1
+opentelemetry-util-http==0.55b1
+packaging==25.0
 platformdirs==4.3.8
+prometheus_client==0.22.1
+protobuf==5.29.5
 psycopg2==2.9.10
 PyJWT==2.9.0
 pylint==3.3.7
@@ -26,5 +45,8 @@ requests==2.32.4
 six==1.17.0
 sqlparse==0.5.3
 tomlkit==0.13.3
+typing_extensions==4.14.0
 tzdata==2025.2
 urllib3==2.5.0
+wrapt==1.17.2
+zipp==3.23.0
