--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 asgiref==3.8.1
-astroid==3.3.10
+astroid>=3.2,<4
 certifi==2025.6.15
 charset-normalizer==3.4.2
 cloudinary==1.44.1
@@ -26,7 +26,9 @@ opentelemetry-exporter-otlp-proto-http==1.34.1
 opentelemetry-instrumentation==0.55b1
 opentelemetry-instrumentation-dbapi==0.55b1
 opentelemetry-instrumentation-django==0.55b1
+opentelemetry-instrumentation-psycopg2==0.55b1
 opentelemetry-instrumentation-requests==0.55b1
+opentelemetry-instrumentation-system-metrics==0.55b1
 opentelemetry-instrumentation-wsgi==0.55b1
 opentelemetry-proto==1.34.1
 opentelemetry-sdk==1.34.1
@@ -36,6 +38,7 @@ packaging==25.0
 platformdirs==4.3.8
 prometheus_client==0.22.1
 protobuf==5.29.5
+psutil==7.0.0
 psycopg2==2.9.10
 PyJWT==2.9.0
 pylint==3.3.7
