refactor: update SECRET_KEY environment variable reference in healthcheck step

--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Print all env vars
         run: env
         env:
-          SECRET_KEY: ${{ secrets.SECRET_KEY }}
+          SECRET_KEY: ${{ env.SECRET_KEY }}
           
 
       - name: Check Django health
