feat: update environment configuration and add Docker support for Django application

--- a/.env.exemple
+++ b/.env.exemple
@@ -1,4 +1,8 @@
 SECRET_KEY =
+DEBUG=
+DJANGO_LOGLEVEL=
+DJANGO_ALLOWED_HOSTS=
+DATABASE_ENGINE=django.db.backends.postgresql
 
 DB_NAME=
 DB_USER=
@@ -12,3 +16,6 @@ api_secret =
 
 SENDINBLUE_API_KEY =
 DEFAULT_FROM_EMAIL =
+
+OTEL_EXPORTER_OTLP_ENDPOINT=
+OTEL_SERVICE_NAME=
