--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,3 +65,21 @@ jobs:
           OTEL_EXPORTER_OTLP_ENDPOINT: ${{ secrets.OTEL_EXPORTER_OTLP_ENDPOINT }}
           OTEL_SERVICE_NAME: ${{ secrets.OTEL_SERVICE_NAME }}
 
+  deploy:
+    runs-on: ubuntu-latest
+    needs: healthcheck
+    if: github.ref == 'refs/heads/main'
+    steps:
+      - name: Deploy to DigitalOcean
+        uses: appleboy/ssh-action@master
+        with:
+          host:      ${{ secrets.SSH_HOST_PROD }}
+          username:  deploy
+          key:       ${{ secrets.SSH_KEY }}
+          script: |
+            cd ~/apps/natour
+
+            git pull origin main
+
+            docker-compose build
+            docker-compose up -d --remove-orphans
