--- a/docker/prometheus/config.yml
+++ b/docker/prometheus/config.yml
@@ -5,4 +5,4 @@ scrape_configs:
   - job_name: "django"
     metrics_path: "/metrics"
     static_configs:
-      - targets: ["host.docker.internal:8000"]
+      - targets: ["django-docker:8000"]
