feat: add environment specification for deploy job in CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,6 +67,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
+    environment: .env
     needs: healthcheck
     if: github.ref == 'refs/heads/main'
     steps:
