--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,7 +75,7 @@ jobs:
         uses: appleboy/ssh-action@master
         with:
           host:      ${{ secrets.SSH_HOST_PROD }}
-          username:  deploy
+          username:  root
           key:       ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.SSH_KEY_PASSPHRASE }}
           script: |
