--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,5 +83,5 @@ jobs:
 
             git pull origin main
 
-            docker-compose build
-            docker-compose up -d --remove-orphans
+            docker compose build
+            docker compose up -d --remove-orphans
