--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,8 @@ services:
       DATABASE_PORT: ${DB_PORT}
     env_file:
       - .env
+    volumes:
+      - django_logs:/var/log/django
 
   prometheus:
     image: prom/prometheus
@@ -60,8 +62,8 @@ services:
   promtail:
     image: grafana/promtail:2.9.2
     volumes:
+      - django_logs:/var/log/django
       - ./docker/promtail/config.yml:/etc/promtail/config.yml
-      - ./app.log:/var/log/django/app.log
     command: -config.file=/etc/promtail/config.yml
     restart: unless-stopped
 
@@ -78,3 +80,4 @@ services:
 
 volumes:
     postgres_data:
+    django_logs:
