feat: ensure log directory exists before checking Django health

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      - name: Ensure log directory exists
+        run: mkdir -p /var/log/django
+
       - name: Check Django health
         run: |
           python manage.py check
