feat: refactor logging setup to use local logs directory and remove redundant log directory creation step

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
     env_file:
       - .env
     volumes:
-      - django_logs:/var/log/django
+      - ./logs:/var/log/django
 
   prometheus:
     image: prom/prometheus
