--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ django-anymail==13.0
 django-cors-headers==4.7.0
 django-prometheus==2.4.1
 django-ratelimit==4.1.0
+django-redis==6.0.0
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
 googleapis-common-protos==1.70.0
@@ -54,6 +55,7 @@ pylint-plugin-utils==0.9.0
 python-dateutil==2.9.0.post0
 python-decouple==3.8
 python-dotenv==1.1.0
+redis==6.2.0
 requests==2.32.4
 six==1.17.0
 sqlparse==0.5.3
