fix: update .env.exemple and .pylintrc

--- a/.env.exemple
+++ b/.env.exemple
@@ -2,7 +2,7 @@ SECRET_KEY =
 DEBUG=
 DJANGO_LOGLEVEL=
 DJANGO_ALLOWED_HOSTS=
-DATABASE_ENGINE=django.db.backends.postgresql
+DATABASE_ENGINE=
 
 DB_NAME=
 DB_USER=
@@ -10,12 +10,14 @@ DB_PASSWORD=
 DB_HOST=
 DB_PORT=
 
-cloud_name = 
-api_key = 
-api_secret =
+CLOUD_NAME=
+API_KEY=
+API_SECRET=
 
-SENDINBLUE_API_KEY =
-DEFAULT_FROM_EMAIL =
+SENDINBLUE_API_KEY = 
+DEFAULT_FROM_EMAIL = 
 
 OTEL_EXPORTER_OTLP_ENDPOINT=
 OTEL_SERVICE_NAME=
+
+REDIS_URL=
