feat: add environment specification for tests job in CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,6 +69,7 @@ jobs:
   tests:
     runs-on: ubuntu-latest
     needs: healthcheck
+    environment: .env
     strategy:
       matrix:
         python-version: ["3.13"]
